# mir-yakoba

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0177d568136b_add_site_settings_and_post_pinning.py  20251210103151_add_cover_image_to_posts.py  20260309_add_post_type.py  20260311_post_type_photo_work_and_document.py  20260313_add_user_levels_and_achievements.py  66811f4fa88b_initial.py
scripts/: entrypoint.sh  fix_enum.py  init.sh  make_admin.py  recalc_xp.py  run_bot_polling.py  setup_webhook.py
src/: __init__.py  config.py  main.py
src/api/v1/: auth.py  comments.py  media.py  router.py
src/bot/: bot.py  instance.py  webhook.py
src/bot/handlers/: auth.py  posts.py
src/core/: redis.py
src/db/: base.py  session.py
src/db/models/: __init__.py  achievement.py  comment.py  media.py  post.py  settings.py  user.py
src/schemas/: comment.py  media.py
src/services/: achievement_image.py  auth.py  comment.py  level.py  media.py  notification.py  post.py  settings.py  transcription.py  user.py
src/tasks/: worker.py
src/web/: __init__.py  router.py
src/web/views/: __init__.py
templates/: base.html
templates/admin/: dashboard.html  post_edit.html  settings.html  user_edit.html  users.html
templates/pages/: gallery.html  home.html  login.html  post_detail.html  profile.html  search.html  works.html
templates/partials/: comment.html  comments_list.html  gallery_grid.html  media_item.html  posts_list.html  search_results.html
